version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/CDB/NBlockCommand.rst.txt
.. vale off



:class:`NBlockCommand`
======================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.CDB.NBlockCommand(iNBlockCommand: Ansys.Common.Interop.FEParsePlugin_ANSYS.INBlockCommand)

   Bases: :py:obj:`object`


   
   Represents a NBLOCK command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: NBlockCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~Nodes`
            - Gets the nodes.







Property detail
---------------
.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Nodes
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.FE.CDB.CommandNode]]


   
   Gets the nodes.
















   ..
       !! processed by numpydoc !!







.. vale on